tests/requireLazy/requireLazy.exp
Error ---------------------------------------------------------------------------------------------- requireLazy.js:8:22

Cannot assign `A.stringValueA` to `num2` because string [1] is incompatible with number [2]. [incompatible-type]

   requireLazy.js:8:22
   8|   var num2: number = A.stringValueA; // Error: string ~> number
                           ^^^^^^^^^^^^^^

References:
   A.js:8:17
   8|   stringValueA: "someString"
                      ^^^^^^^^^^^^ [1]
   requireLazy.js:8:13
   8|   var num2: number = A.stringValueA; // Error: string ~> number
                  ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- requireLazy.js:9:22

Cannot assign `A.numberValueA` to `str2` because number [1] is incompatible with string [2]. [incompatible-type]

   requireLazy.js:9:22
   9|   var str2: string = A.numberValueA; // Error: number ~> string
                           ^^^^^^^^^^^^^^

References:
   A.js:7:17
   7|   numberValueA: 1,
                      ^ [1]
   requireLazy.js:9:13
   9|   var str2: string = A.numberValueA; // Error: number ~> string
                  ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- requireLazy.js:13:22

Cannot assign `B.stringValueB` to `num4` because string [1] is incompatible with number [2]. [incompatible-type]

   requireLazy.js:13:22
   13|   var num4: number = B.stringValueB; // Error: string ~> number
                            ^^^^^^^^^^^^^^

References:
   B.js:8:17
    8|   stringValueB: "someString"
                       ^^^^^^^^^^^^ [1]
   requireLazy.js:13:13
   13|   var num4: number = B.stringValueB; // Error: string ~> number
                   ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- requireLazy.js:14:22

Cannot assign `B.numberValueB` to `str4` because number [1] is incompatible with string [2]. [incompatible-type]

   requireLazy.js:14:22
   14|   var str4: string = B.numberValueB; // Error: number ~> string
                            ^^^^^^^^^^^^^^

References:
   B.js:7:17
    7|   numberValueB: 1,
                       ^ [1]
   requireLazy.js:14:13
   14|   var str4: string = B.numberValueB; // Error: number ~> string
                   ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- requireLazy.js:17:20

Cannot resolve name `A`. [cannot-resolve-name]

   17| var notA: Object = A;
                          ^


Error --------------------------------------------------------------------------------------------- requireLazy.js:18:20

Cannot resolve name `B`. [cannot-resolve-name]

   18| var notB: Object = B;
                          ^


Error ---------------------------------------------------------------------------------------------- requireLazy.js:20:1

The first argument to `requireLazy` must be an array literal of string literals and the second argument must be a
callback. [unsupported-syntax]

   20| requireLazy(); // Error: No args
       ^^^^^^^^^^^^^


Error ---------------------------------------------------------------------------------------------- requireLazy.js:21:1

The first argument to `requireLazy` must be an array literal of string literals and the second argument must be a
callback. [unsupported-syntax]

   21| requireLazy([nope], function() {}); // Error: Non-stringliteral args
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


Error --------------------------------------------------------------------------------------------- requireLazy.js:21:14

Cannot resolve name `nope`. [cannot-resolve-name]

   21| requireLazy([nope], function() {}); // Error: Non-stringliteral args
                    ^^^^


Error ---------------------------------------------------------------------------------------------- requireLazy.js:22:1

The first argument to `requireLazy` must be an array literal of string literals and the second argument must be a
callback. [unsupported-syntax]

   22| requireLazy(['A']); // Error: No callback expression
       ^^^^^^^^^^^^^^^^^^



Found 10 errors
